Refactor mappers and service for improved readability and performance